# css-inline-example

./: .gitignore  Cargo.toml
.github/workflows/: build.yml  python-release.yml
bindings/python/: Cargo.toml  MANIFEST.in  build-sdist.sh  setup.py  tox.ini
bindings/python/benches/: inliner.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_inlining.py
css_inline/: Cargo.toml
css_inline/src/: lib.rs
src/: lib.rs
