[package]
name = "css-inline-python"
version = "0.1.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.4", features = ["chrono"] }

[dependencies]
pyo3-built = "0.4"
css-inline = { path = "../../css_inline", version = "*" }
pyo3 = { version = "0.11.1", features = ["extension-module"]}

